fix scrolling on mobile

--- a/app/styles/app.less
+++ b/app/styles/app.less
@@ -17,6 +17,10 @@ body {
     height: 100%;
     width: 100%;
     overflow: auto;
+    -webkit-overflow-scrolling: touch;
+}
+.body-container > * {
+    -webkit-overflow-scrolling: touch;
 }
 
 header .spacer {
